--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,9 @@
 services:
-  - type: worker
-    name: slackbot-worker
-    runtime: python
-    plan: free
+  - type: web
+    name: slack-content-bot
+    env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python -m app.main
+    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
-      - key: SLACK_BOT_TOKEN
-      - key: SLACK_SIGNING_SECRET
-      - key: SLACK_APP_TOKEN
-      - key: SERPER_API_KEY
+      - key: PORT
+        value: 8000
