--- a/requirements.txt
+++ b/requirements.txt
@@ -48,8 +48,8 @@ scikit-learn==1.7.2
 scipy==1.16.2
 setuptools==80.9.0
 six==1.17.0
-slack_bolt==1.26.0
-slack_sdk==3.37.0
+slack-bolt==1.26.0
+slack-sdk==3.37.0
 sniffio==1.3.1
 soupsieve==2.8
 starlette==0.48.0
