--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 # Core ML
-torch==2.9.0
-transformers==4.57.0
+torch==2.2.2+cpu
 sentence-transformers==5.1.1
-
+transformers==4.46.2
 # Web / API
 fastapi==0.119.0
 uvicorn==0.37.0
